--- a/Index.html
+++ b/Index.html
@@ -23,10 +23,10 @@
                 </div>
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-link active">Home</a></li>
-                    <li><a href="sobre.html" class="nav-link">Quem Somos</a></li>
-                    <li><a href="planos.html" class="nav-link">Planos</a></li>
-                    <li><a href="convenios.html" class="nav-link">Convênios</a></li>
-                    <li><a href="contato.html" class="nav-link">Contato</a></li>
+                    <li><a href="src/pages/sobre.html" class="nav-link">Quem Somos</a></li>
+                    <li><a href="src/pages/planos.html" class="nav-link">Planos</a></li>
+                    <li><a href="src/pages/convenios.html" class="nav-link">Convênios</a></li>
+                    <li><a href="src/pages/contato.html" class="nav-link">Contato</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
