--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <title>Beacon | Corretora de Planos de Saúde</title>
     <meta name="description"
         content="Conheça os planos de saúde ideais para você. Somos especialistas em convênios médicos.">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
@@ -187,7 +187,7 @@
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="js/script.js"></script>
+    <script src="src/js/script.js"></script>
 </body>
 
 </html>
