--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
                     <h2>Beacon</h2>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="index.html" class="nav-link active">Home</a></li>
+                    <li><a href="Index.html" class="nav-link active">Home</a></li>
                     <li><a href="src/pages/sobre.html" class="nav-link">Quem Somos</a></li>
                     <li><a href="src/pages/planos.html" class="nav-link">Planos</a></li>
                     <li><a href="src/pages/convenios.html" class="nav-link">Convênios</a></li>
