--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -22,7 +22,7 @@
                     <h2>Beacon</h2>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="Index.html" class="nav-link">Home</a></li>
+                    <li><a href="../index.html" class="nav-link">Home</a></li>
                     <li><a href="sobre.html" class="nav-link active">Quem Somos</a></li>
                     <li><a href="planos.html" class="nav-link">Planos</a></li>
                     <li><a href="convenios.html" class="nav-link">Convênios</a></li>
