--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -20,11 +20,11 @@
                     <h2>Beacon</h2>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="../Index.html" class="nav-link">Home</a></li>
+                    <li><a href="../index.html" class="nav-link">Home</a></li>
                     <li><a href="sobre.html" class="nav-link">Quem Somos</a></li>
                     <li><a href="planos.html" class="nav-link">Planos</a></li>
                     <li><a href="convenios.html" class="nav-link">Convênios</a></li>
-                    <li><a href="contato.html" class="nav-link active">Contato</a></li>
+                    <li><a href="contato.html" class="nav-link">Contato</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span><span class="bar"></span><span class="bar"></span>
