--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
         content="Conheça os planos de saúde ideais para você. Somos especialistas em convênios médicos.">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/logo.png">
 </head>
 
 <body>
