--- a/src/pages/convenios.html
+++ b/src/pages/convenios.html
@@ -46,12 +46,12 @@
             <div class="container">
                 <h2>Operadoras com as quais trabalhamos</h2>
                 <div class="partners-grid">
-                    <div class="partner-logo"><img src="../img/unimed-logo.png" alt="Unimed"></div>
-                    <div class="partner-logo"><img src="../img/amil-logo.png" alt="Amil"></div>
-                    <div class="partner-logo"><img src="../img/bradesco-logo.png" alt="Bradesco Saúde"></div>
-                    <div class="partner-logo"><img src="../img/sulamerica-logo.png" alt="SulAmérica"></div>
-                    <div class="partner-logo"><img src="../img/porto-logo.png" alt="Porto Seguro"></div>
-                    <div class="partner-logo"><img src="../img/hapvida-logo.png" alt="Hapvida"></div>
+                    <div class="partner-logo"><img src=".../img/unimed-logo" alt="Unimed"></div>
+                    <div class="partner-logo"><img src="img/amil-logo.png" alt="Amil"></div>
+                    <div class="partner-logo"><img src="img/bradesco-logo.png" alt="Bradesco Saúde"></div>
+                    <div class="partner-logo"><img src="img/sulamerica-logo.png" alt="SulAmérica"></div>
+                    <div class="partner-logo"><img src="img/porto-logo.png" alt="Porto Seguro"></div>
+                    <div class="partner-logo"><img src="img/hapvida-logo.png" alt="Hapvida"></div>
                 </div>
             </div>
         </section>
