--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -51,20 +51,36 @@
 
             <form id="contact-form" class="contact-form">
                 <h2 class="mb-1">Envie sua Mensagem</h2>
-                <div class="mb-2">
-                    <label for="nome">Nome:</label>
-                    <input type="text" id="nome" name="nome" required>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="nome">Nome</label>
+                        <input type="text" id="nome" name="nome" placeholder="Seu nome completo" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">E-mail</label>
+                        <input type="email" id="email" name="email" placeholder="seu@email.com" required>
+                    </div>
                 </div>
-                <div class="mb-2">
-                    <label for="email">E-mail:</label>
-                    <input type="email" id="email" name="email" required>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="telefone">Telefone</label>
+                        <input type="tel" id="telefone" name="telefone" placeholder="(11) 99999-9999"
+                            pattern="\(\d{2}\) \d{4,5}-\d{4}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="assunto">Assunto</label>
+                        <input type="text" id="assunto" name="assunto" placeholder="Assunto da mensagem" required>
+                    </div>
                 </div>
-                <div class="mb-2">
-                    <label for="mensagem">Mensagem:</label>
-                    <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+                <div class="form-row">
+                    <div class="form-group" style="width:100%">
+                        <label for="mensagem">Mensagem</label>
+                        <textarea id="mensagem" name="mensagem" rows="5" placeholder="Digite sua mensagem"
+                            required></textarea>
+                    </div>
                 </div>
-                <button type="submit" class="btn-primary" id="whatsapp-contact">
-                    <i class="fab fa-whatsapp"></i> Enviar via WhatsApp
+                <button type="submit" class="btn-primary btn-large" id="whatsapp-contact" style="width:100%">
+                    <i class="fab fa-whatsapp"></i> <span style="margin-left:8px;">Enviar via WhatsApp</span>
                 </button>
             </form>
         </section>
@@ -75,7 +91,7 @@
                     <h2>Quer uma proposta personalizada?</h2>
                     <p>Entre em contato pelo WhatsApp e receba atendimento exclusivo.</p>
                     <a href="#" class="btn-primary btn-large" id="whatsapp-cta">
-                        <i class="fab fa-whatsapp"></i> Iniciar Conversa
+                        <i class="fab fa-whatsapp"></i> <span style="margin-left:8px;">Iniciar Conversa</span>
                     </a>
                 </div>
             </div>
@@ -94,6 +110,94 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="../js/script.js"></script>
+    <style>
+        /* Centralizar o botão do formulário de contato */
+        #contact-form .btn-primary.btn-large {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+        }
+
+        /* Responsividade e melhorias do formulário */
+        .contact-form {
+            max-width: 600px;
+            margin: 0 auto;
+            background: #fff;
+            padding: 2rem 1.5rem;
+            border-radius: 12px;
+            box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.07);
+        }
+
+        .form-row {
+            display: flex;
+            gap: 1rem;
+            flex-wrap: wrap;
+        }
+
+        .form-group {
+            flex: 1 1 200px;
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 1rem;
+        }
+
+        .form-group label {
+            font-weight: 500;
+            margin-bottom: 0.3rem;
+            color: #1a1a1a;
+        }
+
+        .form-group input,
+        .form-group textarea {
+            padding: 0.7rem 1rem;
+            border: 1px solid #d1d5db;
+            border-radius: 6px;
+            font-size: 1rem;
+            background: #f9f9f9;
+            transition: border 0.2s;
+        }
+
+        .form-group input:focus,
+        .form-group textarea:focus {
+            border: 1.5px solid #1e90ff;
+            outline: none;
+            background: #fff;
+        }
+
+        .btn-primary.btn-large {
+            font-size: 1.1rem;
+            padding: 1.2rem 0;
+            border-radius: 10px;
+            margin-top: 0.5rem;
+            min-width: 260px;
+        }
+
+        #whatsapp-cta.btn-primary.btn-large {
+            font-size: 1.1rem;
+            padding: 0.7rem 0;
+            border-radius: 10px;
+            width: 50%;
+            min-width: 160px;
+            max-width: 400px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        @media (max-width: 700px) {
+            .form-row {
+                flex-direction: column;
+                gap: 0;
+            }
+
+            .contact-form {
+                padding: 1.2rem 0.5rem;
+            }
+        }
+    </style>
 </body>
 
 </html>
