--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -47,27 +47,31 @@
 
     <!-- Main Content -->
     <main>
+        <div style="height: 40px;"></div>
         <!-- Nossa História -->
         <section class="about-history">
             <div class="container">
                 <div class="about-content">
                     <div class="about-text">
                         <h2>Nossa História</h2>
-                        <p>A Beacon nasceu em 2015 com o propósito de ser mais do que uma simples corretora de planos de
+                        <p style="text-align: justify;">A Beacon nasceu em 2015 com o propósito de ser mais do que uma
+                            simples corretora de planos de
                             saúde. Fundada por profissionais experientes do setor de seguros, nossa empresa surgiu da
                             necessidade de oferecer um atendimento verdadeiramente personalizado e consultivo aos nossos
                             clientes.</p>
 
-                        <p>Ao longo dos anos, construímos uma reputação sólida baseada na confiança, transparência e
+                        <p style="text-align: justify;">Ao longo dos anos, construímos uma reputação sólida baseada na
+                            confiança, transparência e
                             excelência no atendimento. Nosso crescimento constante é reflexo do compromisso que temos
                             com cada cliente, tratando suas necessidades de saúde como prioridade máxima.</p>
 
-                        <p>Hoje, somos reconhecidos como uma das principais corretoras de planos de saúde da região, com
+                        <p style="text-align: justify;">Hoje, somos reconhecidos como uma das principais corretoras de
+                            planos de saúde da região, com
                             parcerias estratégicas com as melhores operadoras do mercado e uma equipe altamente
                             qualificada.</p>
                     </div>
                     <div class="about-image">
-                        <img src="../img/about-history.jpg" alt="História da Beacon">
+                        <!-- Imagem removida -->
                     </div>
                 </div>
             </div>
@@ -75,36 +79,44 @@
 
         <!-- Missão, Visão e Valores -->
         <section class="mission-vision">
+            <div style="height: 20px;"></div>
             <div class="container">
                 <div class="mvv-grid">
                     <div class="mvv-card" data-aos="fade-up">
-                        <div class="mvv-icon">
-                            <i class="fas fa-bullseye"></i>
+                        <div style="display: flex; align-items: center; gap: 10px;">
+                            <span class="mvv-icon"><i class="fas fa-bullseye"></i></span>
+                            <h3 style="margin: 0;">Missão</h3>
                         </div>
-                        <h3>Missão</h3>
-                        <p>Facilitar o acesso a planos de saúde de qualidade, oferecendo consultoria especializada e
+                        <p style="text-align: justify;">Facilitar o acesso a planos de saúde de qualidade, oferecendo
+                            consultoria especializada e
                             atendimento personalizado para garantir que cada cliente encontre a melhor opção para suas
                             necessidades e orçamento.</p>
                     </div>
+                    <div style="height: 20px;"></div>
                     <div class="mvv-card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="mvv-icon">
-                            <i class="fas fa-eye"></i>
+                        <div style="display: flex; align-items: center; gap: 10px;">
+                            <span class="mvv-icon"><i class="fas fa-eye"></i></span>
+                            <h3 style="margin: 0;">Visão</h3>
                         </div>
-                        <h3>Visão</h3>
-                        <p>Ser reconhecida como a principal referência em corretagem de planos de saúde, expandindo
+                        <p style="text-align: justify;">Ser reconhecida como a principal referência em corretagem de
+                            planos de saúde, expandindo
                             nossa atuação e mantendo sempre o foco na excelência do atendimento e satisfação do cliente.
                         </p>
                     </div>
+                    <div style="height: 20px;"></div>
                     <div class="mvv-card" data-aos="fade-up" data-aos-delay="200">
-                        <div class="mvv-icon">
-                            <i class="fas fa-heart"></i>
+                        <div style="display: flex; align-items: center; gap: 10px;">
+                            <span class="mvv-icon"><i class="fas fa-heart"></i></span>
+                            <h3 style="margin: 0;">Valores</h3>
                         </div>
-                        <h3>Valores</h3>
                         <ul>
-                            <li><strong>Transparência:</strong> Informações claras e honestas</li>
-                            <li><strong>Comprometimento:</strong> Dedicação total ao cliente</li>
-                            <li><strong>Ética:</strong> Conduta íntegra em todos os negócios</li>
-                            <li><strong>Inovação:</strong> Sempre em busca de melhorias</li>
+                            <li style="margin-left: 40pt;"><strong>Transparência:</strong> Informações claras e honestas
+                            </li>
+                            <li style="margin-left: 40pt;"><strong>Comprometimento:</strong> Dedicação total ao cliente
+                            </li>
+                            <li style="margin-left: 40pt;"><strong>Ética:</strong> Conduta íntegra em todos os negócios
+                            </li>
+                            <li style="margin-left: 40pt;"><strong>Inovação:</strong> Sempre em busca de melhorias</li>
                         </ul>
                     </div>
                 </div>
@@ -114,6 +126,7 @@
         <!-- Nossa Equipe -->
         <section class="team-section">
             <div class="container">
+                <div style="height: 40px;"></div>
                 <h2 class="section-title">Nossa Equipe</h2>
                 <p class="section-subtitle">Profissionais especializados dedicados ao seu bem-estar</p>
 
@@ -171,50 +184,63 @@
 
         <!-- Nossos Diferenciais -->
         <section class="differentials">
+            <div style="height: 20px;"></div>
             <div class="container">
                 <h2 class="section-title">Nossos Diferenciais</h2>
                 <div class="differentials-grid">
-                    <div class="differential-item" data-aos="fade-right">
-                        <div class="differential-icon">
+                    <div class="differential-item" data-aos="fade-right"
+                        style="display: flex; align-items: center; gap: 16px;">
+                        <div class="differential-icon"
+                            style="display: flex; align-items: center; justify-content: center; min-width: 40px;">
                             <i class="fas fa-clock"></i>
                         </div>
                         <div class="differential-content">
-                            <h4>Atendimento Ágil</h4>
+                            <h4 style="margin: 0;">Atendimento Ágil</h4>
                             <p>Respostas rápidas e eficientes para todas as suas dúvidas e necessidades.</p>
                         </div>
                     </div>
 
-                    <div class="differential-item" data-aos="fade-right" data-aos-delay="100">
-                        <div class="differential-icon">
+                    <div style="height: 20px;"></div>
+                    <div class="differential-item" data-aos="fade-right" data-aos-delay="100"
+                        style="display: flex; align-items: center; gap: 16px;">
+                        <div class="differential-icon"
+                            style="display: flex; align-items: center; justify-content: center; min-width: 40px;">
                             <i class="fas fa-user-tie"></i>
                         </div>
                         <div class="differential-content">
-                            <h4>Consultoria Especializada</h4>
+                            <h4 style="margin: 0;">Consultoria Especializada</h4>
                             <p>Análise detalhada do seu perfil para encontrar o plano ideal.</p>
                         </div>
                     </div>
 
-                    <div class="differential-item" data-aos="fade-right" data-aos-delay="200">
-                        <div class="differential-icon">
+                    <div style="height: 20px;"></div>
+                    <div class="differential-item" data-aos="fade-right" data-aos-delay="200"
+                        style="display: flex; align-items: center; gap: 16px;">
+                        <div class="differential-icon"
+                            style="display: flex; align-items: center; justify-content: center; min-width: 40px;">
                             <i class="fas fa-handshake"></i>
                         </div>
                         <div class="differential-content">
-                            <h4>Parcerias Sólidas</h4>
+                            <h4 style="margin: 0;">Parcerias Sólidas</h4>
                             <p>Relacionamento próximo com as melhores operadoras do mercado.</p>
                         </div>
                     </div>
 
-                    <div class="differential-item" data-aos="fade-right" data-aos-delay="300">
-                        <div class="differential-icon">
+                    <div style="height: 20px;"></div>
+                    <div class="differential-item" data-aos="fade-right" data-aos-delay="300"
+                        style="display: flex; align-items: center; gap: 16px;">
+                        <div class="differential-icon"
+                            style="display: flex; align-items: center; justify-content: center; min-width: 40px;">
                             <i class="fas fa-headset"></i>
                         </div>
                         <div class="differential-content">
-                            <h4>Suporte Contínuo</h4>
+                            <h4 style="margin: 0;">Suporte Contínuo</h4>
                             <p>Acompanhamento durante todo o período de vigência do seu plano.</p>
                         </div>
                     </div>
                 </div>
             </div>
+            <div style="height: 40px;"></div>
         </section>
 
         <!-- CTA Section -->
