--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
                 </div>
                 <ul class="nav-menu">
                     <li><a href="Index.html" class="nav-link active">Home</a></li>
-                    <li><a href="src/pages/sobre.html" class="nav-link">Quem Somos</a></li>
+                    <li><a href="src/pages/sobre.html" class="nav-link">Quem somos</a></li>
                     <li><a href="src/pages/planos.html" class="nav-link">Planos</a></li>
                     <li><a href="src/pages/convenios.html" class="nav-link">Convênios</a></li>
                     <li><a href="src/pages/contato.html" class="nav-link">Contato</a></li>
@@ -45,7 +45,7 @@
         <section class="hero">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>Sua Saúde em Primeiro Lugar</h1>
+                    <h1>Sua saúde em primeiro lugar</h1>
                     <p>Encontre o plano de saúde ideal para você e sua família. Somos especialistas em convênios médicos
                         com as melhores operadoras do mercado.</p>
                     <div class="hero-buttons">
@@ -70,21 +70,21 @@
                         <div class="card-icon">
                             <i class="fas fa-shield-alt"></i>
                         </div>
-                        <h3>Segurança e Confiança</h3>
+                        <h3>Segurança e confiança</h3>
                         <p>Anos de experiência no mercado de seguros de saúde, sempre priorizando a transparência.</p>
                     </div>
                     <div class="highlight-card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-icon">
                             <i class="fas fa-users"></i>
                         </div>
-                        <h3>Atendimento Personalizado</h3>
+                        <h3>Atendimento personalizado</h3>
                         <p>Consultoria especializada para encontrar o plano que melhor se adequa ao seu perfil.</p>
                     </div>
                     <div class="highlight-card" data-aos="fade-up" data-aos-delay="200">
                         <div class="card-icon">
                             <i class="fas fa-handshake"></i>
                         </div>
-                        <h3>Melhores Operadoras</h3>
+                        <h3>Melhores operadoras</h3>
                         <p>Parcerias com as principais operadoras do mercado: Unimed, Amil, Bradesco Saúde e muito mais.
                         </p>
                     </div>
@@ -95,7 +95,7 @@
         <!-- Operadoras Section -->
         <section class="partners">
             <div class="container">
-                <h2>Nossas Operadoras Parceiras</h2>
+                <h2>Nossas operadoras parceiras</h2>
                 <div class="partners-grid">
                     <div class="partner-logo">
                         <img src="img/unimed-logo.png" alt="Unimed">
@@ -127,7 +127,7 @@
                     <p>Nossa equipe está pronta para te ajudar a escolher o melhor plano de saúde para suas
                         necessidades.</p>
                     <a href="#" class="btn-primary btn-large" id="whatsapp-cta">
-                        <i class="fab fa-whatsapp"></i> Solicitar Cotação
+                        <i class="fab fa-whatsapp"></i> Solicitar cotação
                     </a>
                 </div>
             </div>
@@ -151,9 +151,9 @@
                     </div>
                 </div>
                 <div class="footer-section">
-                    <h4>Links Rápidos</h4>
+                    <h4>Links rápidos</h4>
                     <ul>
-                        <li><a href="src/pages/sobre.html">Quem Somos</a></li>
+                        <li><a href="src/pages/sobre.html">Quem somos</a></li>
                         <li><a href="src/pages/planos.html">Planos</a></li>
                         <li><a href="src/pages/convenios.html">Convênios</a></li>
                         <li><a href="src/pages/contato.html">Contato</a></li>
@@ -168,7 +168,7 @@
                     </div>
                 </div>
                 <div class="footer-section">
-                    <h4>Horário de Atendimento</h4>
+                    <h4>Horário de atendimento</h4>
                     <p>Segunda a Sexta: 8h às 18h</p>
                     <p>Sábado: 8h às 12h</p>
                     <p>Domingo: Fechado</p>
@@ -176,7 +176,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2024 Beacon Corretora. Todos os direitos reservados.</p>
-                <a href="src/pages/politica.html">Política de Privacidade</a>
+                <a href="src/pages/politica.html">Política de privacidade</a>
             </div>
         </div>
     </footer>
