--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato - Beacon | Corretora de Planos de Saúde</title>
+    <title>Contato - Beacon | Corretora de planos de saúde</title>
     <meta name="description" content="Entre em contato com a Beacon e fale com nossos especialistas em saúde.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -21,7 +21,7 @@
                 </div>
                 <ul class="nav-menu">
                     <li><a href="../../index.html" class="nav-link active">Home</a></li>
-                    <li><a href="sobre.html" class="nav-link">Quem Somos</a></li>
+                    <li><a href="sobre.html" class="nav-link">Quem somos</a></li>
                     <li><a href="planos.html" class="nav-link">Planos</a></li>
                     <li><a href="convenios.html" class="nav-link">Convênios</a></li>
                     <li><a href="contato.html" class="nav-link">Contato</a></li>
@@ -35,7 +35,7 @@
 
     <section class="page-header">
         <div class="container">
-            <h1>Fale Conosco</h1>
+            <h1>Fale conosco</h1>
             <p>Estamos prontos para tirar suas dúvidas e ajudar na escolha do melhor plano</p>
         </div>
     </section>
@@ -43,14 +43,14 @@
     <main>
         <section class="container p-2">
             <div class="contact-info mb-3">
-                <h2>Informações de Contato</h2>
+                <h2>Informações de contato</h2>
                 <p><i class="fas fa-phone"></i> (11) 9999-9999</p>
                 <p><i class="fas fa-envelope"></i> contato@beacon.com.br</p>
                 <p><i class="fas fa-map-marker-alt"></i> São Paulo, SP</p>
             </div>
 
             <form id="contact-form" class="contact-form">
-                <h2 class="mb-1">Envie sua Mensagem</h2>
+                <h2 class="mb-1">Envie sua mensagem</h2>
                 <div class="form-row">
                     <div class="form-group">
                         <label for="nome">Nome</label>
