--- a/src/pages/convenios.html
+++ b/src/pages/convenios.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Convênios - Beacon | Corretora de Planos de Saúde</title>
+    <title>Convênios - Beacon | Corretora de planos de saúde</title>
     <meta name="description" content="Veja as operadoras e convênios médicos com os quais a Beacon trabalha.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -22,7 +22,7 @@
                 </div>
                 <ul class="nav-menu">
                     <li><a href="../../index.html" class="nav-link active">Home</a></li>
-                    <li><a href="sobre.html" class="nav-link">Quem Somos</a></li>
+                    <li><a href="sobre.html" class="nav-link">Quem somos</a></li>
                     <li><a href="planos.html" class="nav-link">Planos</a></li>
                     <li><a href="convenios.html" class="nav-link active">Convênios</a></li>
                     <li><a href="contato.html" class="nav-link">Contato</a></li>
