--- a/src/pages/planos.html
+++ b/src/pages/planos.html
@@ -23,7 +23,7 @@
                 </div>
                 <ul class="nav-menu">
                     <li><a href="../../index.html" class="nav-link active">Home</a></li>
-                    <li><a href="sobre.html" class="nav-link">Quem Somos</a></li>
+                    <li><a href="sobre.html" class="nav-link">Quem somos</a></li>
                     <li><a href="planos.html" class="nav-link active">Planos</a></li>
                     <li><a href="convenios.html" class="nav-link">Convênios</a></li>
                     <li><a href="contato.html" class="nav-link">Contato</a></li>
@@ -40,7 +40,7 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1>Nossos Planos</h1>
+            <h1>Nossos planos</h1>
             <p>Encontre o plano de saúde ideal para suas necessidades</p>
         </div>
     </section>
@@ -52,7 +52,7 @@
         <section class="plans-filter">
             <div class="container">
                 <div class="filter-buttons">
-                    <button class="filter-btn active" data-filter="all">Todos os Planos</button>
+                    <button class="filter-btn active" data-filter="all">Todos os planos</button>
                     <button class="filter-btn" data-filter="individual">Individual</button>
                     <button class="filter-btn" data-filter="familiar">Familiar</button>
                     <button class="filter-btn" data-filter="empresarial">Empresarial</button>
@@ -65,7 +65,7 @@
         <!-- Planos Individuais -->
         <section class="plans-section" id="individual-plans">
             <div class="container">
-                <h2 class="section-title">Planos Individuais</h2>
+                <h2 class="section-title">Planos individuais</h2>
                 <p class="section-subtitle">Proteção completa para você, com atendimento personalizado e ampla
                     cobertura.</p>
                 <div class="plans-grid">
@@ -88,11 +88,11 @@
                             </ul>
                         </div>
                         <div class="plan-footer">
-                            <a href="#" class="btn-primary plan-btn">Contratar Plano</a>
+                            <a href="#" class="btn-primary plan-btn">Contratar plano</a>
                         </div>
                     </div>
                     <div class="plan-card featured" data-aos="fade-up" data-aos-delay="100" data-category="individual">
-                        <div class="plan-badge">Mais Popular</div>
+                        <div class="plan-badge">Mais popular</div>
                         <div class="plan-header">
                             <img src="../img/plan-individual2.png" alt="Plano Completo" class="plan-icon">
                             <h3>Completo</h3>
@@ -112,7 +112,7 @@
                             </ul>
                         </div>
                         <div class="plan-footer">
-                            <a href="#" class="btn-primary plan-btn">Contratar Plano</a>
+                            <a href="#" class="btn-primary plan-btn">Contratar plano</a>
                         </div>
                     </div>
                     <div class="plan-card" data-aos="fade-up" data-aos-delay="200" data-category="individual">
@@ -135,7 +135,7 @@
                             </ul>
                         </div>
                         <div class="plan-footer">
-                            <a href="#" class="btn-primary plan-btn">Contratar Plano</a>
+                            <a href="#" class="btn-primary plan-btn">Contratar plano</a>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
         <!-- Planos Familiares -->
         <section class="plans-section" id="familiar-plans">
             <div class="container">
-                <h2 class="section-title">Planos Familiares</h2>
+                <h2 class="section-title">Planos familiares</h2>
                 <p class="section-subtitle">Proteção para toda a família, com benefícios exclusivos e atendimento
                     especial para cada membro.</p>
                 <div class="plans-grid">
@@ -169,7 +169,7 @@
                             </ul>
                         </div>
                         <div class="plan-footer">
-                            <a href="#" class="btn-primary plan-btn">Contratar Plano</a>
+                            <a href="#" class="btn-primary plan-btn">Contratar plano</a>
                         </div>
                     </div>
                     <div class="plan-card featured" data-aos="fade-up" data-aos-delay="100" data-category="familiar">
@@ -228,7 +228,7 @@
         <!-- Planos Empresariais -->
         <section class="plans-section" id="empresarial-plans">
             <div class="container">
-                <h2 class="section-title">Planos Empresariais</h2>
+                <h2 class="section-title">Planos empresariais</h2>
                 <p class="section-subtitle">Soluções corporativas personalizadas</p>
 
                 <div class="enterprise-content">
@@ -270,6 +270,7 @@
                 <div class="enterprise-cta">
                     <h3>Solicite uma proposta personalizada</h3>
                     <p>Nossa equipe está pronta para desenvolver a melhor solução para sua empresa</p>
+                    <div style="height: 20pt;"></div>
                     <a href="#" class="btn-primary btn-large" id="whatsapp-empresarial">
                         <i class="fab fa-whatsapp"></i> Solicitar Proposta
                     </a>
@@ -280,19 +281,19 @@
         <!-- Como Contratar -->
         <section class="how-to-hire">
             <div class="container">
-                <h2 class="section-title">Como Contratar</h2>
+                <h2 class="section-title">Como contratar</h2>
                 <div class="steps-grid">
                     <div class="step-card" data-aos="fade-up">
                         <div class="step-number">1</div>
                         <div class="step-content">
-                            <h4>Consulta Gratuita</h4>
+                            <h4>Consulta gratuita</h4>
                             <p>Entre em contato conosco para uma análise gratuita do seu perfil e necessidades</p>
                         </div>
                     </div>
                     <div class="step-card" data-aos="fade-up" data-aos-delay="100">
                         <div class="step-number">2</div>
                         <div class="step-content">
-                            <h4>Escolha do Plano</h4>
+                            <h4>Escolha do plano</h4>
                             <p>Apresentamos as melhores opções baseadas na sua análise personalizada</p>
                         </div>
                     </div>
