--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -53,7 +53,7 @@
             <div class="container">
                 <div class="about-content">
                     <div class="about-text">
-                        <h2>Nossa História</h2>
+                        <h2>Nossa história</h2>
                         <p style="text-align: justify;">A Beacon nasceu em 2015 com o propósito de ser mais do que uma
                             simples corretora de planos de
                             saúde. Fundada por profissionais experientes do setor de seguros, nossa empresa surgiu da
@@ -127,7 +127,7 @@
         <section class="team-section">
             <div class="container">
                 <div style="height: 40px;"></div>
-                <h2 class="section-title">Nossa Equipe</h2>
+                <h2 class="section-title">Nossa equipe</h2>
                 <p class="section-subtitle">Profissionais especializados dedicados ao seu bem-estar</p>
 
                 <div class="team-grid">
@@ -186,7 +186,7 @@
         <section class="differentials">
             <div style="height: 20px;"></div>
             <div class="container">
-                <h2 class="section-title">Nossos Diferenciais</h2>
+                <h2 class="section-title">Nossos diferenciais</h2>
                 <div class="differentials-grid">
                     <div class="differential-item" data-aos="fade-right"
                         style="display: flex; align-items: center; gap: 16px;">
@@ -251,7 +251,7 @@
                     <p>Junte-se a milhares de clientes satisfeitos que já encontraram o plano de saúde ideal conosco.
                     </p>
                     <a href="#" class="btn-primary btn-large" id="whatsapp-cta">
-                        <i class="fab fa-whatsapp"></i> Falar com Consultor
+                        <i class="fab fa-whatsapp"></i> Falar com consultor
                     </a>
                 </div>
             </div>
@@ -275,9 +275,9 @@
                     </div>
                 </div>
                 <div class="footer-section">
-                    <h4>Links Rápidos</h4>
+                    <h4>Links rápidos</h4>
                     <ul>
-                        <li><a href="sobre.html">Quem Somos</a></li>
+                        <li><a href="sobre.html">Quem somos</a></li>
                         <li><a href="planos.html">Planos</a></li>
                         <li><a href="convenios.html">Convênios</a></li>
                         <li><a href="contato.html">Contato</a></li>
@@ -292,7 +292,7 @@
                     </div>
                 </div>
                 <div class="footer-section">
-                    <h4>Horário de Atendimento</h4>
+                    <h4>Horário de atendimento</h4>
                     <p>Segunda a Sexta: 8h às 18h</p>
                     <p>Sábado: 8h às 12h</p>
                     <p>Domingo: Fechado</p>
@@ -300,7 +300,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2024 Beacon Corretora. Todos os direitos reservados.</p>
-                <a href="politica.html">Política de Privacidade</a>
+                <a href="politica.html">Política de privacidade</a>
             </div>
         </div>
     </footer>
