--- a/Index.html
+++ b/Index.html
@@ -18,10 +18,10 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+                    <div style="display: flex; flex-direction: row; align-items: center; gap: 10px;">
                         <img src="src/img/logo.png" alt="Beacon Logo" class="logo"
-                            style="display: block; margin: 0 auto;">
-                        <h2 style="text-align: center; margin-top: 4px;">Beacon</h2>
+                            style="height: 40px; width: auto; display: block;">
+                        <h2 style="margin: 0; color: #2c5aa0; font-size: 1.5rem; font-weight: 700;">Beacon</h2>
                     </div>
                 </div>
                 <ul class="nav-menu">
