--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         content="Conheça os planos de saúde ideais para você. Somos especialistas em convênios médicos.">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="icon" type="image/png" href="../img/logo.png">
+    <link rel="icon" type="image/png" href="../img/logo">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="src/img/HealthFamily.jpg" alt="Família saudável">
+                    <img src="img/hero-health.jpg" alt="Família saudável">
                 </div>
             </div>
         </section>
@@ -98,22 +98,22 @@
                 <h2>Nossas operadoras parceiras</h2>
                 <div class="partners-grid">
                     <div class="partner-logo">
-                        <img src="src/img/unimed-logo.png" alt="Unimed">
+                        <img src="img/unimed-logo.png" alt="Unimed">
                     </div>
                     <div class="partner-logo">
-                        <img src="src/img/amil-logo.png" alt="Amil">
+                        <img src="img/amil-logo.png" alt="Amil">
                     </div>
                     <div class="partner-logo">
-                        <img src="src/img/bradesco-logo.png" alt="Bradesco Saúde">
+                        <img src="img/bradesco-logo.png" alt="Bradesco Saúde">
                     </div>
                     <div class="partner-logo">
-                        <img src="src/img/sulamerica-logo.png" alt="SulAmérica">
+                        <img src="img/sulamerica-logo.png" alt="SulAmérica">
                     </div>
                     <div class="partner-logo">
-                        <img src="src/img/porto-logo.png" alt="Porto Seguro">
+                        <img src="img/porto-logo.png" alt="Porto Seguro">
                     </div>
                     <div class="partner-logo">
-                        <img src="src/img/hapvida-logo.png" alt="Hapvida">
+                        <img src="img/hapvida-logo.png" alt="Hapvida">
                     </div>
                 </div>
             </div>
